<resources>
    <string name="app_name">Daily Weight Tracker</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="back">Back</string>
    <string name="weight_history">Weight History</string>
    <string name="weight">Weight</string>
    <string name="date_added">Date Added</string>
    <string name="add_new_weight_entry">Add new weight entry</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="save_username">Save Username</string>
    <string name="change_username">Change Username</string>
    <string name="change_goal">Change Goal</string>
    <string name="set_goal">Set Goal</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="revoke">Revoke</string>
    <string name="permission_required">Permission required</string>
    <string name="allow">Allow</string>
    <string name="user_account">User Account</string>
    <string name="weight_unit">Weight Unit</string>
    <string name="pounds_lbs">Pounds (lbs)</string>
    <string name="kilograms_kg">Kilograms (kg)</string>
    <string name="new_username">New Username</string>
    <string name="change_password">Change Password</string>
    <string name="delete_all_weights">Delete All Weights</string>
    <string name="logout">Logout</string>
    <string name="add_weight">Add Weight</string>
    <string name="enter_weight_e_g_150_5">Enter weight (e.g. 150.5)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_weight">Edit Weight</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="most_recent_weight">Most Recent Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="add_new_weight">Add New Weight</string>
    <string name="view_weight_history">View Weight History</string>
    <string name="account">Account</string>
    <string name="sms_description">Giving SMS permissions is required to send SMS notifications. The app will send a message only when you have achieved your goal weight.</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_test_sms">Send Test SMS</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_weight">New Weight</string>
    <string name="enter_goal_weight">Enter goal weight</string>
    <string name="settings">Settings</string>
</resources>
