<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the "Change Password" dialog, which allows users to update their password. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Input field for the user to enter their current password. -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input field for the user to enter their new password. -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/new_password"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Button Row. -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <!-- Cancel button. -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_password_change"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay" />

        <!-- Save button. -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_password_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/save"
            app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay" />
    </LinearLayout>

</LinearLayout>
